# OriginX

./: .env.example  00_START_HERE.md  ALL_STEPS_COMPLETE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  BUILD.md  COMPLETION_SUMMARY.md  CONFIGURATION_COMPLETE.md  COUNTRIES.md  DAILY_CHECKLIST.md  DEPLOY_NOW.md  DEPLOY_VPN_SERVERS.md  DEVELOPER_LEARNING_PATH.md  DIGITALOCEAN_DEPLOYMENT.md  DOCUMENTATION_INDEX.md  FREE_VPN_SERVERS.md  GETTING_STARTED_NOW.md  IMPLEMENTATION_ROADMAP.md  LICENSE  MIGRATION.md  NO_HARDCODED_IPS.md  OPTION_C_DEPLOYMENT.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_NEWSTACK.md  SERVER_CONFIGURATION.md  START_VPN.sh  SYSTEM_RUNNING.md  TECH_STACK_SUMMARY.md  backend-api.ts  check-status.sh  package-lock.json  package.json  test-connection-flow.js  test-ip-fetching.js  test-ip-simple.js  test-multiple-ips.js  test-real-connection.js  tsconfig.json  (+1 more)
backend/cpp/: CMakeLists.txt  package.json
backend/cpp/include/: ipc_bridge.h  vpn_engine.h
backend/cpp/src/: ipc_bridge.cpp  main.cpp  vpn_engine.cpp
desktop/electron-react/: main.ts  package.json  preload.ts
desktop/electron-react/src/pages/: Dashboard.example.tsx
mobile/react-native/: VPNService.ts  package.json
mobile/react-native/android/: VPNModule.java
mobile/react-native/ios/: VPNModule.h  VPNModule.swift
mobile/react-native/screens/: Dashboard.example.tsx
openvpn-configs/: au-sydney.ovpn  fr-paris.ovpn  gb-london.ovpn  us-ny.ovpn
public/: OriginX.code-workspace  index.html
scripts/: deploy-digitalocean.sh  deploy-toronto.sh  fetch-vpngate-servers.js  setup-digitalocean.sh
src/: App.css  App.tsx  index.css  main.ts  preload.ts
src/config/: servers.json
src/data/: countries.ts
src/pages/: Dashboard.css  Dashboard.tsx  Logs.css  Logs.tsx  Settings.css  Settings.tsx
src/services/: ServerConfigManager.ts  vpnManager.ts
